  * Document DPKG_MAINTSCRIPT_PACKAGE maintainer script environment variable
    in dpkg man page.
  * Change po4a usage to not create unwated changes depending if doing out or
    in-tree builds.
  * Use po4a “--previous” support when updating the man pages.
    Suggested by Christian Perrier <bubulle@debian.org>.
  * On configuration error print file name and line number.

  [ Raphael Hertzog ]
  * Replace install-info by a wrapper around GNU's install-info. The wrapper
    will be dropped in squeeze+1. dpkg now Breaks: old versions of
    info-browsers that do not depend on the new install-info package
    that provides the real functionality. Closes: #9771, #523980
    See http://wiki.debian.org/Transitions/DpkgToGnuInstallInfo for details.
  * Fix dpkg's preinst in case /var/lib/dpkg/alternatives contains unexpected
    sub-directories. Closes: #535138
    And also when one of the file doesn't contain correct alternatives
    information (improper number of lines). Closes: #537558
  * Upgrade Standards-Version to 3.8.2 (no changes).
  * Update deb-substvars(5) to list fields that do not support substvars.
    Closes: #535353
  * Fix dpkg-parsechangelog to include all entries with -v0 parameter.
    Closes: #537800
  * Fix update-alternatives to mention the correct slave link that can't
    be installed due to a conflicting file instead of quoting the master link.
  * Add support for extra override file in dpkg-scanpackages. Thanks to Robert
    Millan for the patch. Closes: #537559
  * Add support for extra override file in dpkg-scansources.
  * Document format of extra override file in a new manual page
    deb-extra-override(5).
  * Update sample in dpkg-gensymbols(1) to give an accurate listing of
    64 bit arches. Thanks to Julien Cristau for the patch. Closes: #540382
  * Create /etc/cron.daily/dpkg to handle the backup of
    /var/lib/dpkg/status in /var/backups. This is taken out of the cron