@@ -1,4 +1,4 @@
-.TH dpkg.cfg 5 "2009-08-20" "Debian Project" "dpkg suite"
+.TH dpkg.cfg 5 "2009-09-05" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg.cfg \- dpkg configuration file
 .
@@ -6,8 +6,8 @@ dpkg.cfg \- dpkg configuration file
 This file contains default options for dpkg. Each line contains a
 single option which is exactly the same as a normal command line
 option for dpkg except for the leading dashes which are not used
-here. Comments are allowed by starting a line with a hash sign
-("\fB#\fR").
+here. Quotes surrounding option values are stripped. Comments are
+allowed by starting a line with a hash sign ("\fB#\fR").
 .
 .SH FILES
 .I /etc/dpkg/dpkg.cfg.d/[0-9a-zA-Z_-]*
