@@ -1,4 +1,4 @@
-.TH dselect.cfg 5 "2009-08-20" "Debian Project" "dpkg suite"
+.TH dselect.cfg 5 "2009-09-05" "Debian Project" "dpkg suite"
 .SH NAME
 dselect.cfg \- dselect configuration file
 .
@@ -6,8 +6,8 @@ dselect.cfg \- dselect configuration file
 This file contains default options for dselect. Each line contains a
 single option which is exactly the same as a normal commandline
 option for dselect except for the leading dashes which are not used
-here. Comments are allowed by starting a line with a hash sign
-("\fB#\fR").
+here. Quotes surrounding option values are stripped. Comments are
+allowed by starting a line with a hash sign ("\fB#\fR").
 .
 .SH FILES
 .I /etc/dpkg/dselect.cfg.d/[0-9a-zA-Z_-]*
