@@ -42,6 +42,7 @@ dpkg (1.15.4) UNRELEASED; urgency=low
   * Use po4a “--previous” support when updating the man pages.
     Suggested by Christian Perrier <bubulle@debian.org>.
   * On configuration error print file name and line number.
+  * Allow quoting values in configuration file options.
 
   [ Raphael Hertzog ]
   * Replace install-info by a wrapper around GNU's install-info. The wrapper
